# esp8266_nowplaying

./: .gitignore  Dockerfile  Makefile  README.md  code.py  esp8266_nowplaying.ino  pyproject.toml  requirements.txt  secrets.h  server.py
.github/workflows/: build.yml
3d-prints/: Diffuser.scad  Frame.scad  Grid.scad
pcbs/: esp8266_power.kicad_pcb  esp8266_power.pro  esp8266_power.sch
pcbs/gerbers/: esp8266_power-B_Cu.gbr  esp8266_power-B_Mask.gbr  esp8266_power-B_Paste.gbr  esp8266_power-B_SilkS.gbr  esp8266_power-Edge_Cuts.gbr  esp8266_power-F_Cu.gbr  esp8266_power-F_Mask.gbr  esp8266_power-F_Paste.gbr  esp8266_power-F_SilkS.gbr  esp8266_power-job.gbrjob  esp8266_power.drl
